<resources>
    <string name="app_name">FloraFolio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Lavender">Lavender</string>
    <string name="Account">Account</string>
    <string name="Rose">Rose</string>
    <string name="florafolio">FloraFolio</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="my_plants">My Plants</string>
    <string name="upload_new_plant">Upload New Plant</string>
    <string name="hello_name">Hello, Name!</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome to FloraFolio!</string>
    <string name="submit">Submit</string>
    <string name="intro">We cover plant diversity for all your gardening knowledge. \n\n  Let\'s dig into some dirt.</string>
    <string name="home">Home</string>
    <string name="lavInfo">"Lavender is well-suited for cultivation in areas with well-drained soil and plenty of sunlight. It is a hardy plant and is often grown in gardens, borders, or as ornamental plants in landscaping.
                \n Aromatherapy: It is often used in aromatherapy to promote relaxation and alleviate stress.
        \n Culinary: Some lavender varieties are used in culinary applications, adding a subtle floral flavor to dishes and desserts. However, not all lavender is suitable for consumption, so it's important to use varieties specifically labeled as culinary lavender.
        \n Medicinal: Lavender has been used in traditional medicine for its potential anti-inflammatory and antimicrobial properties."</string>
    <string name="roseInfo">"Roses thrive in well-drained soil with adequate sunlight. Proper pruning, watering, and pest control are essential for healthy rose bushes.
        \n Aromatherapy: Often used to reduce stress, anxiety, and promote relaxation. The sweet and floral scent of rose oil is known for its mood-enhancing effects.
        \n Culinary: Rose water is a byproduct of the distillation of rose essential oil. It is commonly used in Middle Eastern and Asian cuisines. It adds a subtle floral flavor to desserts, beverages, and certain savory dishes.
        \n Medicinal: The fruit of the rose, known as rose hips, is rich in vitamin C and may be used in herbal teas, jams, and supplements for potential immune-boosting properties."</string>
    <string name="rosemary">Rosemary</string>
    <string name="rosemaryInfo">"Rosemary is an aromatic evergreen shrub with green linear leaves. Rosemary produces small, blue to purple flowers, and different cultivars may exhibit variations in flower color.
        \n Aromatherapy: The aroma of rosemary is believed to enhance mental focus, concentration, and memory.  Its essential oil is used in perfumery and aromatherapy. Rosemary oil is used in hair care for scalp health and hair growth.
        \n Medicinal: In traditional medicine, rosemary is associated with potential health benefits. It is believed to have antioxidant properties. It has also been used to support digestion and as a mild analgesic. The inhalation of rosemary oil vapors may provide respiratory benefits, helping to clear congestion and support overall respiratory health."</string>
    <string name="uploaded_plant_image">Uploaded Plant Image</string>
</resources>