<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="407dp"
        android:layout_height="297dp"
        android:src="@drawable/flogo"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="-2dp" />
    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="307dp" />
    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
    <Button
        android:id="@+id/forgotPW"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="458dp" />

    <Button
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="458dp" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="527dp" />
</androidx.constraintlayout.widget.ConstraintLayout>