<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="190dp"
        android:layout_height="170dp"
        tools:src="@drawable/prof" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:text="@string/hello_name"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginStart="20dp"
        android:text="@string/my_plants"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:text="@string/upload_new_plant" />

    <ImageView
        android:id="@+id/plantUploads"
        android:layout_width="117dp"
        android:layout_height="107dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        tools:src="@drawable/plant" />

</FrameLayout>